fix(NB22): fix krl_policy import with graceful degradation
- Add krl-causal-policy-toolkit/src to dev path configuration
- Fix exception handling to catch ImportError separately from TierAccessError
- Enterprise features now gracefully degrade with upgrade message
- Fix dev path instructions to use ~/.krl/.env

--- a/notebooks/applied-econometrics/22-workforce-development-roi.ipynb
+++ b/notebooks/applied-econometrics/22-workforce-development-roi.ipynb
@@ -248,8 +248,8 @@
     "    pip install krl-core krl-data-connectors krl-models\n",
     "\n",
     "Development (contributors):\n",
-    "    export KRL_DEV_PATH=\"/path/to/KRL/Private IP\"\n",
-    "    # Or add to ~/.krl/.env\n",
+    "    # Add to ~/.krl/.env:\n",
+    "    # KRL_DEV_PATH=/your/local/path/to/krl-monorepo\n",
     "\"\"\"\n",
     "import os\n",
     "import sys\n",
@@ -276,7 +276,7 @@
     "if _KRL_DEV_PATH and os.path.isdir(_KRL_DEV_PATH):\n",
     "    # Developer mode: use local clones\n",
     "    _krl_base = _KRL_DEV_PATH\n",
-    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\"]:\n",
+    "    for _pkg in [\"krl-open-core/src\", \"krl-data-connectors/src\", \"krl-geospatial-tools/src\", \"krl-causal-policy-toolkit/src\"]:\n",
     "        _path = os.path.join(_krl_base, _pkg)\n",
     "        if os.path.isdir(_path) and _path not in sys.path:\n",
     "            sys.path.insert(0, _path)\n",
@@ -335,34 +335,39 @@
     "try:\n",
     "    from krl_policy.estimators.treatment_effect import TreatmentEffectEstimator\n",
     "    _ENTERPRISE_AVAILABLE = True\n",
+    "except ImportError:\n",
+    "    # Module not available - will show upgrade options below\n",
+    "    pass\n",
     "except Exception as _tier_err:\n",
-    "    if \"TierAccessError\" in str(type(_tier_err).__name__) or \"tier\" in str(_tier_err).lower():\n",
-    "        print(\"\\\\n\" + \"=\"*70)\n",
-    "        print(\"\u26a0\ufe0f  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
-    "        print(\"=\"*70)\n",
-    "        print(\"\\\\n\ud83d\udcca Your current tier: COMMUNITY\")\n",
-    "        print(\"\ud83d\udcc8 Required tier: ENTERPRISE\")\n",
-    "        print(\"\\\\n\ud83d\udd13 Unlock advanced policy evaluation capabilities:\")\n",
-    "        print(\"   \u2022 Treatment Effect Estimators (DiM, IPW, Doubly Robust)\")\n",
-    "        print(\"   \u2022 ROI/BCR Calculation with Uncertainty Quantification\")\n",
-    "        print(\"   \u2022 Cost-Benefit Analysis Framework\")\n",
-    "        print(\"   \u2022 Sensitivity Analysis Tools\")\n",
-    "        print(\"\\\\n\ud83d\udca1 ACCESS OPTIONS:\")\n",
-    "        print(\"   \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\")\n",
-    "        print(\"   \u2502 \ud83d\udd39 PROFESSIONAL: $149/mo (annual: $1,428/yr)               \u2502\")\n",
-    "        print(\"   \u2502    \u2192 https://buy.stripe.com/krl_pro_monthly              \u2502\")\n",
-    "        print(\"   \u2502                                                             \u2502\")\n",
-    "        print(\"   \u2502 \ud83d\udd38 ENTERPRISE: Custom pricing (full causal suite)          \u2502\")\n",
-    "        print(\"   \u2502    \u2192 Contact: enterprise@khipuresearchlabs.com              \u2502\")\n",
-    "        print(\"   \u2502                                                             \u2502\")\n",
-    "        print(\"   \u2502 \u26a1 RENTAL PASSES (Stripe Checkout):                         \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $5/1hr:   https://buy.stripe.com/krl_1hr_pass         \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $15/24hr: https://buy.stripe.com/krl_24hr_pass        \u2502\")\n",
-    "        print(\"   \u2502    \u2192 $99/7day: https://buy.stripe.com/krl_7day_trial       \u2502\")\n",
-    "        print(\"   \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\")\n",
-    "        print(\"=\"*70 + \"\\\\n\")\n",
-    "    else:\n",
-    "        raise  # Re-raise if it's a different error\n",
+    "    # Handle TierAccessError or similar tier-restriction errors\n",
+    "    if \"TierAccessError\" not in str(type(_tier_err).__name__) and \"tier\" not in str(_tier_err).lower():\n",
+    "        raise  # Re-raise unexpected errors\n",
+    "\n",
+    "if not _ENTERPRISE_AVAILABLE:\n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"\u26a0\ufe0f  ENTERPRISE FEATURE: Causal Policy Toolkit\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(\"\\n\ud83d\udcca Your current tier: COMMUNITY\")\n",
+    "    print(\"\ud83d\udcc8 Required tier: ENTERPRISE\")\n",
+    "    print(\"\\n\ud83d\udd13 Unlock advanced policy evaluation capabilities:\")\n",
+    "    print(\"   \u2022 Treatment Effect Estimators (DiM, IPW, Doubly Robust)\")\n",
+    "    print(\"   \u2022 ROI/BCR Calculation with Uncertainty Quantification\")\n",
+    "    print(\"   \u2022 Cost-Benefit Analysis Framework\")\n",
+    "    print(\"   \u2022 Sensitivity Analysis Tools\")\n",
+    "    print(\"\\n\ud83d\udca1 ACCESS OPTIONS:\")\n",
+    "    print(\"   \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\")\n",
+    "    print(\"   \u2502 \ud83d\udd39 PROFESSIONAL: $149/mo (annual: $1,428/yr)               \u2502\")\n",
+    "    print(\"   \u2502    \u2192 https://buy.stripe.com/krl_pro_monthly              \u2502\")\n",
+    "    print(\"   \u2502                                                             \u2502\")\n",
+    "    print(\"   \u2502 \ud83d\udd38 ENTERPRISE: Custom pricing (full causal suite)          \u2502\")\n",
+    "    print(\"   \u2502    \u2192 Contact: enterprise@khipuresearchlabs.com              \u2502\")\n",
+    "    print(\"   \u2502                                                             \u2502\")\n",
+    "    print(\"   \u2502 \u26a1 RENTAL PASSES (Stripe Checkout):                         \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $5/1hr:   https://buy.stripe.com/krl_1hr_pass         \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $15/24hr: https://buy.stripe.com/krl_24hr_pass        \u2502\")\n",
+    "    print(\"   \u2502    \u2192 $99/7day: https://buy.stripe.com/krl_7day_trial       \u2502\")\n",
+    "    print(\"   \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\")\n",
+    "    print(\"=\"*70 + \"\\n\")\n",
     "\n",
     "# Import Professional FRED connector\n",
     "from krl_data_connectors.professional.fred_full import FREDFullConnector\n",
@@ -387,7 +392,8 @@
     "print(f\"   \u2022 Benefit Valuation (Participant, Society)\")\n",
     "print(f\"   \u2022 ROI Calculation (NPV, BCR)\")\n",
     "print(f\"\\n\ud83d\udce1 Data Source: FRED Professional (Labor Market)\")\n",
-    "print(\"=\"*70)"
+    "print(\"=\"*70)\n",
+    ""
    ]
   },
   {
